--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Merry-Go-Round
 email: lilliw2@gmail.com
 description: >
   A Jekyll landing page with a carousel.
-baseurl: "/merrygoround"
-url: "http://lillworkspace.github.io"
+baseurl: ""
+url: "http://localhost:4000"
 twitter_username: 
 github_username:  lillworkspace
 # Build Settings
