test remove footer

--- a/_includes/_config.yml
+++ b/_includes/_config.yml
@@ -4,7 +4,7 @@ email: lilliw2@gmail.com
 description: >
   A Jekyll landing page with a carousel.
 baseurl: "/merrygoround"
-url: "http://lillworkspace.github.io"
+url: "http://singhaidotnish.github.io"
 twitter_username: 
 github_username:  lillworkspace
 # Build Settings
